Carme-Frontend/Carme-Django/static/css/style.css
@value --carme-* from "./theme.css";

/*--------------------------------------------------*/
/*            Font Size - Font Weight               */
/*--------------------------------------------------*/

/* text-color */
.text-primary{
  color:var(--carme-primary)!important;
}
.text-secondary{
  color:var(--carme-secondary)!important;
}
.text-success{
  color:var(--carme-success)!important;
}
.text-info{
  color:var(--carme-info)!important;
}
.text-warning{
  color:var(--carme-warning)!important;
}
.text-danger{
  color:var(--carme-danger)!important;
}
.text-light{
  color:var(--carme-light)!important;
}
.text-dark{
  color:var(--carme-dark)!important;
}

/* text-rounded-pill */
.rounded-pill-1{
  border-radius: 0.1rem!important;
}
.rounded-pill-2{
  border-radius: 0.2rem!important;
}
.rounded-pill-3{
  border-radius: 0.3rem!important;
}
.rounded-pill-4{
  border-radius: 0.4rem!important;
}
.rounded-pill-5{
  border-radius: 0.5rem!important;
}

/* text-underline */
.text-underline-hover {
  text-decoration: none;
}
.text-underline-hover:hover {
  text-decoration: underline;
}

/* text-align */
.text-justify {
  text-align: justify;
}
.text-left{
  text-align: left;
}
.text-right{
  text-align: right;
}
.text-center{
  text-align: center;
}

/* font-size */
.fs--5{
  font-size: .475rem!important;
}
.fs--4{
  font-size: .575rem!important;
}
.fs--3{
  font-size: .675rem!important;
}
.fs--2{
  font-size: .775rem!important;
}
.fs--1{
  font-size: .875rem!important;
}
.fs--0{
  font-size: .975rem!important;
}
.fs-0{
  font-size: 1.0rem!important;
}
.fs-1{
  font-size: 1.025rem!important;
}
.fs-2{
  font-size: 1.125rem!important;
}
.fs-3{
  font-size: 1.225rem!important;
}
.fs-4{
  font-size: 1.325rem!important;
}
.fs-5{
  font-size: 1.425rem!important;
}
.fs-6{
  font-size: 1.525rem!important;
}
.fs-7{
  font-size: 1.625rem!important;
}
.fs-8{
  font-size: 1.725rem!important;
}
.fs-9{
  font-size: 1.825rem!important;
}
.fs-10{
  font-size: 1.925rem!important;
}
.fs-20{
  font-size: 2.925rem!important;
}
.fs-30{
  font-size: 3.925rem!important;
}
.fs-40{
  font-size: 4.925rem!important;
}
.fs-50{
  font-size: 5.925rem!important;
}

/* font-weight */
.fw-100 {
  font-weight:100!important;
}
.fw-200 {
  font-weight:200!important;
}
.fw-300 {
  font-weight:300!important;
}
.fw-400 {
  font-weight:400!important; /*= fw-normal*/
}
.fw-500 {
  font-weight:500!important;
}
.fw-600 {
  font-weight:600!important;
}
.fw-700 {
  font-weight:700!important; /*= fw-bold*/
}
.fw-800 {
  font-weight:800!important;
}
.fw-900 {
  font-weight:900!important;
}
.fw-1000 {
  font-weight:1000!important;
}

/* i-circles */
.i-blue {
  background: rgba(var(--carme-blue-rgb),0.08);
  color: var(--carme-blue);
}
.i-gray {
  background: rgba(var(--carme-gray-rgb),0.08);
  color: var(--carme-gray);
} 
.i-green {
  background: rgba(var(--carme-green-rgb),0.08);
  color: var(--carme-green);
}
.i-cyan {
  background: rgba(var(--carme-cyan-rgb),0.08);
  color: var(--carme-cyan);
}
.i-orange {
  background: rgba(var(--carme-orange-rgb),0.08);
  color: var(--carme-orange);
}
.i-red {
  background: rgba(var(--carme-red-rgb),0.08);
  color: var(--carme-red);
}

/*--------------------------------------------------*/
/*                     General                      */
/*--------------------------------------------------*/

body {
  background-color: var(--carme-body-bg)!important;
}
.text-header {
  color: var(--carme-card-head-text)!important;
}
.text-body {
  color: var(--carme-card-body-text)!important;
}
.text-watermark {
  color: var(--carme-watermark-text)!important;
}
.text-title {
  color: var(--carme-title-text)!important;
}
.text-brand {
  color: var(--carme-brand-text)!important;
}
a{
  color: var(--carme-primary);
}

/*--------------------- Borders --------------------*/
.border-bottom-double{
  border-bottom: 2px solid var(--carme-border-head);
}
.border-bottom-solid{
  border-bottom: 1px solid var(--carme-border-body);
}
.border-bottom-dashed{
  border-bottom: 1px dashed var(--carme-border-body);
}
.border-top-double{
  border-top: 2px solid var(--carme-border-head);
}
.border-top-solid{
  border-top: 1px solid var(--carme-border-body);
}
.border-top-dashed{
  border-top: 1px dashed var(--carme-border-body);
}


/*-----------------  Card & Modal  -----------------*/

/* card & modal */
.card, .modal-content {
  background-color: var(--carme-card-bg);
  border: 1px solid var(--carme-card-border);
  box-shadow: var(--carme-card-shadow)!important; 
  -webkit-box-shadow: var(--carme-card-shadow)!important;
  border-radius: 10px;
  overflow:hidden;  
  text-align: Left;
}
.card-header, .modal-header {
  background-color: var(--carme-card-header-bg);
  border-bottom: 1px solid var(--carme-card-header-border);
  box-shadow: var(--carme-card-header-shadow)!important; 
  -webkit-box-shadow: var(--carme-card-header-shadow)!important;
}
.card-footer, .modal-footer {
  background-color: var(--carme-card-footer-bg);
  border-top: 1px solid var(--carme-card-footer-border);
  box-shadow: var(--carme-card-footer-shadow)!important; 
  -webkit-box-shadow: var(--carme-card-footer-shadow)!important;
}


/* body-scrollbar not hidden when modal is active*/
.modal-open {
  overflow:hidden!important; 
  overflow-y:auto!important;
  /* padding-right:0 !important; */
}
/* ... */

